Basic SDL/OpenGL setup. Libraries are not included so need to figure that out

--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
@@ -13,5 +13,13 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\shaders">
+      <UniqueIdentifier>{e38ac3f0-c158-4fc4-8300-5f7705e1db37}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
