Renderering Textures, have just started adding ModelViewProjection Matrix

--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
@@ -22,4 +22,17 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\vertShader.glsl">
+      <Filter>Source Files\shaders</Filter>
+    </None>
+    <None Include="src\fragShader.glsl">
+      <Filter>Source Files\shaders</Filter>
+    </None>
+  </ItemGroup>
 </Project>
