Added camera class

--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
@@ -145,9 +145,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Camera.h" />
+    <ClInclude Include="include\game_object.h" />
     <ClInclude Include="include\Shader.h" />
   </ItemGroup>
   <ItemGroup>
