--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
@@ -147,10 +147,12 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
-    <ClInclude Include="include\game_object.h" />
+    <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\Renderer.h" />
     <ClInclude Include="include\Shader.h" />
   </ItemGroup>
   <ItemGroup>
