--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
@@ -147,12 +147,15 @@
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\NEATLayer.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\ShaderLibrary.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\Layer.h" />
+    <ClInclude Include="include\NEATLayer.h" />
     <ClInclude Include="include\Renderer.h" />
     <ClInclude Include="include\ShaderLibrary.h" />
   </ItemGroup>
