--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\ShaderLibrary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\NEATLayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\ShaderLibrary.h">
@@ -42,6 +45,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Layer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\NEATLayer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
