--- a/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
+++ b/rtNeatSimulation/rtNeatSimulation/rtNeatSimulation.vcxproj
@@ -29,26 +29,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -80,7 +80,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\freetype\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\glm-0.9.9.8\glm\glm;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_image-2.0.5\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\glew-2.1.0\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2-2.0.20\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\packages\NEAT.1.2.1\NEAT.1.2.1;C:\Development\University\Final Year Project\Pulled Repos\tinyai\src;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\freetype\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\glm-0.9.9.8\glm\glm;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_image-2.0.5\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\glew-2.1.0\include;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2-2.0.20\include</IncludePath>
     <LibraryPath>C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\freetype\lib\Debug;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_ttf-devel-2.0.15-VC\SDL2_ttf-2.0.15\lib\x64;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2_image-2.0.5\lib\x64;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\glew-2.1.0\lib\Release\x64;C:\Development\University\Final Year Project\FinalYearProject\rtNeatSimulation\rtNeatSimulation\libs\SDL2-2.0.20\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -146,17 +146,27 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Camera.cpp" />
+    <ClCompile Include="src\Connection.cpp" />
+    <ClCompile Include="src\Genome.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\NeatController.cpp" />
     <ClCompile Include="src\NEATLayer.cpp" />
+    <ClCompile Include="src\Node.cpp" />
     <ClCompile Include="src\Renderer.cpp" />
     <ClCompile Include="src\ShaderLibrary.cpp" />
     <ClCompile Include="src\SpeciesMember.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Collidable.h" />
+    <ClInclude Include="FitnessObject.h" />
     <ClInclude Include="include\Camera.h" />
+    <ClInclude Include="include\Connection.h" />
     <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\Genome.h" />
     <ClInclude Include="include\Layer.h" />
+    <ClInclude Include="include\NeatController.h" />
     <ClInclude Include="include\NEATLayer.h" />
+    <ClInclude Include="include\Node.h" />
     <ClInclude Include="include\Renderer.h" />
     <ClInclude Include="include\ShaderLibrary.h" />
     <ClInclude Include="include\SpeciesMember.h" />
